# cross-border-erp-python

./: .editorconfig  .env.example  .env.local.example  .env.test.example  .env.wsl.example  .gitignore  Dockerfile  README.md  alembic.ini  check_app.py  check_connectors.py  check_db.py  check_new_routes.py  cli.py  count_lines.ps1  debug_test.py  docker-compose.app-only.yml  docker-compose.yml  e2e_test.py  frontend_e2e_test.py  init.sql  init_tables.py  merge_v11.ps1  merge_v11.py  pyproject.toml  pytest.ini  requirements.txt  seed_data.py  setup_db.py  test_import.py  test_routes.py  自研跨境ERP原型图.html  跨境电商ERP——需求规格说明书V4.md
.github/workflows/: ci.yml
deploy/cdc/: debezium-connector-config.json  docker-compose.cdc.yml
deploy/gitops/: argocd-application.yaml  argocd-project.yaml
deploy/helm/: values.prod.shared.yaml
deploy/k8s/: erp-deployment.yaml  infrastructure.yaml  network-policy.yaml  pod-disruption-budget.yaml
deploy/monitoring/: alert-rules.yaml  fluentd-config.yaml  grafana-datasources.yaml  kibana-config.yaml  prometheus.yml
docker/compose/: docker-compose.yml
frontend/: index.html  package.json  tsconfig.json
frontend/src/: components.d.ts  main.ts
migrations/: env.py
scripts/: backup_db.ps1  check_syntax.py  count_routes.py  db_backup.py  disaster_recovery_drill.ps1  fix_datetime_imports.py  fix_duplicate_imports.py  init_data.ps1  migration_plan.py  restore_db.ps1  run_e2e_tests.ps1  security_scan.ps1
src/erp/: main.py
tests/: conftest.py  test_api_integration.py  test_auth.py  test_context.py  test_exceptions.py
(+520 files in other folders)
