[project]
name = "erp-python"
version = "0.1.0"
requires-python = ">=3.11"

[tool.bandit]
targets = ["src/erp"]
exclude_dirs = ["tests", "migrations"]
skips = ["B101"]

[tool.safety]
full_report = true

[tool.pip-audit]
desc = true
progress-spinner = "off"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]
ignore = ["E501", "B008", "N818", "RUF001", "RUF012", "TC003"]

[tool.ruff.lint.isort]
known-first-party = ["erp"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["migrations", "tests"]

[[tool.mypy.overrides]]
module = "erp.modules.*"
disallow_untyped_defs = false
